[gd_scene load_steps=12 format=3 uid="uid://bnrfr3x2sboyy"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_1qqb4"]
[ext_resource type="Theme" uid="uid://dchsfnmpldp4" path="res://Resources/Themes/Menu_Button_Bold.tres" id="2_eaihy"]
[ext_resource type="Script" path="res://Scripts/Pause_Menu.gd" id="3_yhrsy"]
[ext_resource type="PackedScene" uid="uid://bnqa3d4ofly5k" path="res://Scenes/Settings.tscn" id="4_vp5xv"]
[ext_resource type="PackedScene" uid="uid://bfl0psaqjjwqe" path="res://Scenes/Player.tscn" id="5_umr3m"]
[ext_resource type="Script" path="res://Scripts/Hitbox.gd" id="6_hmbwh"]
[ext_resource type="Theme" uid="uid://lq11vreljnaq" path="res://Resources/Themes/Menu_Button.tres" id="6_nciag"]
[ext_resource type="PackedScene" uid="uid://cgy7st1hukwkw" path="res://Scenes/Save-Load.tscn" id="7_hrl6s"]
[ext_resource type="PackedScene" uid="uid://tprbp2vtatat" path="res://Scenes/Village.tscn" id="9_yabub"]
[ext_resource type="PackedScene" uid="uid://b0frq720usft" path="res://Scenes/Teleporter.tscn" id="10_rqwxo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xpxwt"]
size = Vector2(676, 89)

[node name="Main" type="Node2D"]
script = ExtResource("1_1qqb4")

[node name="Player" parent="." instance=ExtResource("5_umr3m")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Menu" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_eaihy")
script = ExtResource("3_yhrsy")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="UI/Menu"]
layout_mode = 0
offset_top = 476.0
offset_right = 640.0
offset_bottom = 526.0
scale = Vector2(3, 3)
ratio = 2.5

[node name="Resume" type="Button" parent="UI/Menu/AspectRatioContainer"]
layout_mode = 2
text = "Resume"

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="UI/Menu"]
layout_mode = 0
offset_left = 1.0
offset_top = 633.0
offset_right = 961.0
offset_bottom = 683.0
scale = Vector2(2, 2)
ratio = 2.5

[node name="Settings" type="Button" parent="UI/Menu/AspectRatioContainer2"]
layout_mode = 2
text = "Settings"

[node name="AspectRatioContainer3" type="AspectRatioContainer" parent="UI/Menu"]
layout_mode = 0
offset_top = 958.0
offset_right = 960.0
offset_bottom = 1008.0
scale = Vector2(2, 2)
ratio = 2.5

[node name="Main Menu" type="Button" parent="UI/Menu/AspectRatioContainer3"]
layout_mode = 2
text = "Main Menu"

[node name="AspectRatioContainer4" type="AspectRatioContainer" parent="UI/Menu"]
visible = false
layout_mode = 2
offset_top = 742.0
offset_right = 960.0
offset_bottom = 792.0
scale = Vector2(2, 2)
ratio = 2.5

[node name="Save" type="Button" parent="UI/Menu/AspectRatioContainer4"]
layout_mode = 2
text = "Save"

[node name="AspectRatioContainer5" type="AspectRatioContainer" parent="UI/Menu"]
layout_mode = 2
offset_top = 850.0
offset_right = 960.0
offset_bottom = 900.0
scale = Vector2(2, 2)
ratio = 2.5

[node name="Load" type="Button" parent="UI/Menu/AspectRatioContainer5"]
visible = false
layout_mode = 2
text = "Load
"

[node name="Settings" parent="UI/Menu" instance=ExtResource("4_vp5xv")]
visible = false
layout_mode = 1

[node name="Button" type="Button" parent="UI/Menu"]
layout_mode = 0
offset_left = 842.0
offset_top = 422.0
offset_right = 1078.0
offset_bottom = 453.0
theme = ExtResource("6_nciag")
text = "Skill Tree (Debug)"

[node name="Save-Load" parent="UI/Menu" instance=ExtResource("7_hrl6s")]
visible = false
layout_mode = 1

[node name="Hitbox" type="Area2D" parent="."]
script = ExtResource("6_hmbwh")
value = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(338, -307)
shape = SubResource("RectangleShape2D_xpxwt")

[node name="Village" parent="." instance=ExtResource("9_yabub")]
position = Vector2(-681, -404)

[node name="Teleporter" parent="." instance=ExtResource("10_rqwxo")]
position = Vector2(-585, 1804)

[connection signal="pressed" from="UI/Menu/AspectRatioContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="UI/Menu/AspectRatioContainer2/Settings" to="UI/Menu" method="_on_button2_pressed"]
[connection signal="pressed" from="UI/Menu/AspectRatioContainer3/Main Menu" to="UI/Menu" method="_on_button3_pressed"]
[connection signal="pressed" from="UI/Menu/AspectRatioContainer4/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="UI/Menu/AspectRatioContainer5/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="UI/Menu/Button" to="." method="_on_button_pressed"]
